--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <main>
+    <% if current_user %>
+    Welcome, <%= current_user.email.split("@").first %>
+    <%= link_to "Log out", login_path, method: :delete %>
+    <% else %>
+    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Login", login_path %>
+    <% end %>
+    <%= yield %>
+  </main>
 </body>
 </html>
