--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <% if current_user %>
     Welcome, <%= current_user.email.split("@").first %>
     <%= link_to "Log out", login_path, method: :delete %>
+    <%= link_to "Your feed", welcome_path  %>
     <% else %>
     <%= link_to "Sign Up", new_user_path %>
     <%= link_to "Login", login_path %>
