last commit before lunch

--- a/app/views/confirmation_email/welcome.html.erb
+++ b/app/views/confirmation_email/welcome.html.erb
@@ -1,5 +1,18 @@
-<h1>ConfirmationEmail#welcome</h1>
+<h1>Hello!</h1>
 
 <p>
+  Thank you for signing up for twittest!
+</p>
+<p>
   <%= @greeting %>, find me in app/views/confirmation_email/welcome.html.erb
+</p>
+
+<p>
+  Sincerly
+</p>
+<p>
+  Christopher Lai
+</p>
+<p>
+  Senior back end coding person
 </p>
