--- a/app/views/confirmation_email/welcome.text.erb
+++ b/app/views/confirmation_email/welcome.text.erb
@@ -1,3 +1,8 @@
-ConfirmationEmail#welcome
+Hello!
 
+Thank you for signing up for twittest!
 <%= @greeting %>, find me in app/views/confirmation_email/welcome.text.erb
+
+Sincerly,
+Christopher Lai
+Senior back end coding person
