--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,3 +1,11 @@
-UserMailer#welcome_email
+<%= @user.name %>! Welcome to Twittest.
 
-<%= @greeting %>, find me in app/views/user_mailer/welcome_email.text.erb
+You have successfuly signed up for a Twittest account.
+Welcome to your new family
+
+Start posting tweets right away by clicking this link:
+<%= @url %>
+
+Sincerly
+Chris Lai
+Twittest senior back end coder
