--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
   <main>
     <% if current_user %>
-    Welcome, <%= current_user.email.split("@").first %>
+    <span>Welcome, <%= current_user.email.split("@").first %> </span> |
+    <%= link_to "Your feed", welcome_path  %> |
     <%= link_to "Log out", login_path, method: :delete %>
-    <%= link_to "Your feed", welcome_path  %>
     <% else %>
-    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Sign Up", new_user_path %> |
     <%= link_to "Login", login_path %>
     <% end %>
     <%= yield %>
