--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,22 +1,29 @@
 <h1>These are your tweets</h1>
 
 <% if @tweets == nil %>
- You currently have no tweets
- <% else %>
- <% @tweets.each do |tweet| %>
-   <article class="tweet">
-   <p>
-     <%= link_to "#{tweet.body}", tweet_path(tweet.id) %>
-   </p>
-   <cite>
-     <%= link_to "@#{tweet.user.name}", profile_path(tweet.user_id) %>
-     <%= link_to "edit", edit_tweet_path(tweet.id) %>
-   </cite>
-   </article>
- <% end %>
- <% end %>
+You currently have no tweets
+<% else %>
+<% @tweets.each do |tweet| %>
+<article class="tweet">
+  <p>
+    <%= link_to "#{tweet.body}", tweet_path(tweet.id) %>
+  </p>
+  <cite>
+    <%= link_to "@#{tweet.user.name}", profile_path(tweet.user_id) %> |
+    <%= link_to "edit", edit_tweet_path(tweet.id),method: :patch %> |
+    <%= link_to "delete", tweet_path(tweet.id), method: :delete %> |
+    <%= tweet.time %>
 
+  </cite>
+</article>
+<% end %>
+<% end %>
+<br>
 
-<%= link_to "Go back to the main page", welcome_path %>
+<button type="button" class="btn btn-default">
+  <%= link_to "Go back to the main page", welcome_path %>
+</button>
 
-<%= link_to "Post new tweet", new_tweet_path %>
+<button type="button" class="btn btn-default">
+  <%= link_to "Post new tweet", new_tweet_path %>
+</button>
