--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,16 +1,14 @@
 <h1>Make a new tweet</h1>
 
 
-<%= form_for @tweet, url: tweets_path do |f| %>
+<%= bootstrap_form_for @tweet, url: tweets_path do |f| %>
 
 <% @tweet.errors.full_messages.each do |msg| %>
   <p>
     <%= msg %>
   </p>
 <% end %>
-
-<%= f.label :body %>
-<%= f.text_area :body %>
+<%= f.text_area :body, placeholder: "Type something that happened to you..." %>
 
 <%= f.submit "Post tweet" %>
 
