--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,9 @@
 <h1>Welcome to Twitter</h1>
 
-<%= form_for @user, url: users_path do |f| %>
-  <!-- Display errors when something cant be saved -->
-  <% @user.errors.full_messages.each do |msg| %>
-    <p>
-      <%= msg %>
-    </p>
-  <% end %>
-
-  <%= f.label :email %>
+<%= bootstrap_form_for @user, url: users_path do |f| %>
   <%= f.text_field :email %>
-
-  <%= f.label :name   %>
   <%= f.text_field :name  %>
-
-  <%= f.label :password   %>
   <%= f.password_field :password  %>
-
-  <%= f.label :password_confirmation   %>
   <%= f.password_field :password_confirmation  %>
 
   <%= f.submit %>
