--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <h1>Welcome to Twitter</h1>
 
 <%= bootstrap_form_for @user, url: users_path do |f| %>
-  <%= f.text_field :email %>
-  <%= f.text_field :name  %>
-  <%= f.password_field :password  %>
-  <%= f.password_field :password_confirmation  %>
+  <%= f.text_field :email,icon: "user" %>
+  <%= f.text_field :name, icon: "user"  %>
+  <%= f.password_field :password, icon:  "user"  %>
+  <%= f.password_field :password_confirmation, icon: "user" %>
 
   <%= f.submit %>
 <% end %>
