--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require rails_bootstrap_forms
+ *= require bootstrap
  */
 body{
   background-color: rgb(192, 222, 237);
