--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Twitter</h1>
+<h1>Welcome to Tweeter</h1>
 
 <%= bootstrap_form_for @user, url: users_path do |f| %>
   <%= f.text_field :email,icon: "envelope" %>
