--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,5 +28,9 @@ There are currently no tweets to show
   <%= link_to "Go to your tweets", tweets_path %>
 </button>
 
+<button type="button" class="btn btn-default">
+  <%= link_to "Post new tweet", new_tweet_path %>
+</button>
+
 
 <%# tweet.created_at.to_formatted_s(:long_ordinal) %>
