--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
 <body>
   <main>
     <% if current_user %>
-    <span>Welcome, <%= current_user.email.split("@").first %> </span> |
-    <%= link_to "Your tweets", tweets_path  %> |
+    <span>Welcome, <%= current_user.name %> </span> |
     <%= link_to "All tweets", welcome_path  %> |
+    <%= link_to "Followed users", follow_path  %> |
+    <%= link_to "Your tweets", tweets_path  %> |
     <%= link_to "Log out", login_path, method: :delete %>
     <% else %>
     <%= link_to "Sign Up", new_user_path %> |
