--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Tweeter! </h1>
 
-<% if @tweets == nil %>
+<% if @tweets == [] %>
 There are currently no tweets to show
 
 <% else %>
