prep for heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,7 +44,7 @@ body{
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
   font: bold 14px/18px Helvetica, Arial, sans-serif;
-  color: #000;
+  color: #337ab7;
 }
 
 .tweet p{
@@ -73,8 +73,8 @@ cite{
   float: right;
 }
 
-span{
+main span{
   color: #337ab7;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 14px;
 }
