--- a/app/views/follow_users/index.html.erb
+++ b/app/views/follow_users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Followed Users </h1>
+<h1>Followed Users's Tweets </h1>
 
 <% if @tweets == [] %>
 <h5>You are currently not following any users</h5>
