--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>These are your tweets</h1>
 
 <% if @tweets == [] %>
-You currently have no tweets
+<h5>You currently have no tweets</h5>
 <% else %>
 <% @tweets.each do |tweet| %>
 <article class="tweet">
