--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,7 +4,7 @@
 Welcome to your new family</h3>
 
 <h5>Start posting tweets right away by clicking this link:
-<%= @url %></h5>
+<a href="https://twittest-rails.herokuapp.com/login"></a>  </h5>
 
 <hr>
 
